k8s/platform/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ranch-app
  namespace: platform
spec:
  selector:
    app: ranch-app
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
